k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: samuel-deployment
  labels:
    app: motd
spec:
  replicas: 3
  selector:
    matchLabels:
      app: motd
  template:
    metadata:
      labels:
        app: motd
    spec:
      containers:
      - name: motd
        image: emptysl0t/motd-api:v1.0
