k8s/service.yml
#34.141.181.173
apiVersion: v1
kind: Service
metadata:
  name: cluster-ip-samuel
spec:
  selector:
    app: motd
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
